# lumeire

./: .gitignore  TODO.md  pyproject.toml
datasets/: 20150430SolubilitiesSum(1).csv  Supplementary Table S1. 9,943 compounds with experimental aqueous solubility values in logarithmic units.csv  aat.csv
notebooks/: main.ipynb  preprocessing.ipynb
