[tool.poetry]
name = "lumeire"
version = "0.1.0"
description = ""
authors = ["James Lin <jameskimimk@gmail.com>"]
readme = "README.md"
packages = [{include = "lumeire"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.3.0"
deepchem = "^2.7.1"
numpy = "1.22.4"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
rdkit = "^2023.3.2"
tqdm = "^4.65.0"
itables = "^1.5.3"

[tool.poetry.group.extras.dependencies]
torch = "^2.0.1"
jax = {extras = ["cpu"], version = "^0.4.13"}
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.13.0"
torch-geometric = "^2.3.1"
pytorch-lightning = "^2.0.5"
dm-haiku = "^0.0.10"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
